<resources>
    <!-- General -->
    <string name="app_name">Jokenpo</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_player">Jokenpo</string>
    <string name="preference_file_key">br.com.rlmg.jokenpo.PREFERENCE_FILE_KEY</string>

    <!-- Notifications -->
    <string name="challenge_notification_title">New Challenge</string>
    <string name="challenge_notification_message">%1$s is challenging you!!</string>

    <!-- Shared Preferences -->

    <!-- Login Activity -->
    <string name="valid_user_name_message">Enter a valid user name</string>
    <string name="user_name_hint">User</string>
    <string name="login_button">Login</string>
    <string name="authentication_progress_dialog_title">Wait</string>
    <string name="authentication_progress_dialog_message">Authenticating...</string>

    <!-- Player Hub Activity -->
    <string name="menu_play_button_text">PLAY</string>
    <string name="menu_view_match_history_button_text">VIEW MATCH HISTORY</string>
    <string name="menu_settings_button_text">SETTINGS</string>
    <string name="menu_logout_button_text">LOGOUT</string>
    <string name="incomming_match_dialog_title">Match Challenge</string>
    <string name="incomming_match_dialog_message">Do you want to proceed?</string>
    <string name="incomming_match_dialog_positive_button">Accept</string>
    <string name="incomming_match_dialog_negative_button">Decline</string>
    <string name="declined_match_dialog_title">Declined</string>
    <string name="declined_match_dialog_message">Oh No! The match was declined!! :(</string>
    <string name="declined_match_dialog_button">OK</string>
    <string name="select_Image">Select Image</string>

    <!-- Room Activity -->
    <string name="room_progress_dialog_title">Challenge</string>
    <string name="room_progress_dialog_message">Waiting for Player 2 to accept the match</string>
    <string name="room_title">Players Online</string>

    <!-- Match Activity-->
    <string name="match_current_choice">Your current choice</string>
    <string name="match_move_choice">Choose your move</string>
    <string name="match_move_confirmation">Move Confirmation</string>
    <string name="match_move_message_confirmation">If you submit this move you will not be able to roll back. Are you sure you want to make this move?</string>
    <string name="match_waiting_title">Match</string>
    <string name="match_waiting_message">Waiting for player to make his move</string>
    <string name="match_cancel">Cancel</string>
    <string name="match_submit_move">Submit Move</string>
    <string name="match_taunt">Taunt</string>

    <string name="match_exit_confirmation">Exit</string>
    <string name="match_exit_message">Are you sure you want to give up?</string>
    <string name="match_load_give_up">Giving up the game...</string>
    <string name="match_give_up">You opponent gave up the match!</string>
    <string name="match_alert_gave_up">Your opponent gave up the game!</string>

    <!-- Match Result Activity-->
    <string name="match_result_play_again">Play Again</string>
    <string name="match_result_exit">Exit</string>
    <string name="match_result_loser">Loser</string>
    <string name="match_result_winner">Winner</string>
    <string name="match_result_you_win">You win!</string>
    <string name="match_result_you_lose">You lose! :(</string>
    <string name="match_result_draw">Draw</string>

    <!-- Match history result-->
    <string name="match_history_title">Historic</string>
    <string name="match_history_seconds_ago">seconds ago</string>
    <string name="match_history_minutes_ago">minutes ago</string>
    <string name="match_history_hours_ago">hours ago</string>
    <string name="match_history_days_ago">days ago</string>
    <string name="match_history_opponent_quitted"> rage quitted the match :(</string>
    <string name="match_history_you_quitted">You rage quitted the match :(</string>

    <!-- Settings Activity-->
    <string name="settings_select_language">Select language</string>
    <string name="settings_select_font_size">Font size</string>
    <string name="settings_show_notification">Show notification</string>
    <string name="settings_sound">Sound</string>
    <string name="settings_title">Settings</string>
    <string name="settings_font_size_small">Small</string>
    <string name="settings_font_size_normal">Normal</string>
    <string name="settings_font_size_large">Large</string>
    <string name="title_activity_taunt_list">TauntListActivity</string>

    <!-- Taunt Activity-->
    <string name="taunt_loser">LOSER</string>
    <string name="taunt_good_luck">GOOD LUCK</string>
    <string name="taunt_smile">SMILE</string>
    <string name="taunt_cry">CRY</string>
    <string name="taunt_message_loser">Player 2 says: I will win bastard</string>
    <string name="taunt_message_good_luck">Player 2 says: Good luck have fun</string>
    <string name="taunt_message_smile">Player 2 says: Hihihi :)</string>
    <string name="taunt_message_cry">Player 2 says: Do not cry looser :)</string>
</resources>