<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="190dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@drawable/jokenpo_logo" />

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:id="@+id/textView_User"/>


        <Button
            android:id="@+id/btn_play"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/menu_play_button_text"/>

        <Button
            android:id="@+id/btn_viewHistory"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/menu_view_match_history_button_text"/>

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/menu_settings_button_text"/>

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/menu_logout_button_text"/>

    </LinearLayout>
</ScrollView>