<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/match_current_choice"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:textAlignment="center"/>

    <com.joooonho.SelectableRoundedImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/match_player_choice"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:layout_height="400dip"
        android:layout_width="210dip"
        android:layout_marginTop="20dip"
        app:sriv_left_top_corner_radius="16dip"
        app:sriv_right_top_corner_radius="0dip"
        app:sriv_left_bottom_corner_radius="48dip"
        app:sriv_right_bottom_corner_radius="16dip"
        app:sriv_border_width="1dip"
        app:sriv_border_color="#000000"
        app:sriv_oval="true"
        android:layout_weight="4"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/player_move_layout"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_margin="30dip"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:layout_weight="7">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/match_move_choice"
            android:textAppearance="?android:attr/textAppearanceListItem"
            android:textAlignment="center"/>

        <LinearLayout
            android:orientation="horizontal"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <com.joooonho.SelectableRoundedImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/match_player_choice_rock"
                android:src="@drawable/rock"
                android:scaleType="centerCrop"
                android:layout_height="70dip"
                android:layout_width="70dip"
                android:layout_gravity="center_vertical"
                app:sriv_left_top_corner_radius="16dip"
                app:sriv_right_top_corner_radius="0dip"
                app:sriv_left_bottom_corner_radius="48dip"
                app:sriv_right_bottom_corner_radius="16dip"
                app:sriv_border_width="1dip"
                app:sriv_border_color="#000000"
                app:sriv_oval="true"
                android:layout_weight="1"/>

            <com.joooonho.SelectableRoundedImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/match_player_choice_paper"
                android:src="@drawable/paper"
                android:scaleType="centerCrop"
                android:layout_height="70dip"
                android:layout_width="70dip"
                android:layout_gravity="center_vertical"
                android:layout_margin="35dip"
                app:sriv_left_top_corner_radius="16dip"
                app:sriv_right_top_corner_radius="0dip"
                app:sriv_left_bottom_corner_radius="48dip"
                app:sriv_right_bottom_corner_radius="16dip"
                app:sriv_border_width="1dip"
                app:sriv_border_color="#000000"
                app:sriv_oval="true"
                android:layout_weight="1"/>

            <com.joooonho.SelectableRoundedImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/match_player_choice_scissors"
                android:src="@drawable/scissors"
                android:scaleType="centerCrop"
                android:layout_height="70dip"
                android:layout_width="70dip"
                android:layout_gravity="center_vertical"
                app:sriv_left_top_corner_radius="16dip"
                app:sriv_right_top_corner_radius="0dip"
                app:sriv_left_bottom_corner_radius="48dip"
                app:sriv_right_bottom_corner_radius="16dip"
                app:sriv_border_width="1dip"
                app:sriv_border_color="#000000"
                app:sriv_oval="true"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/match_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dip"
        android:text="@string/match_submit_move"/>

</LinearLayout>
